@@ -2,6 +2,7 @@
  - Add 'readme_from' directive to Makefile.PL.
  - Improve example in Error::Pure::Always doc to explicit set to default
    Error::Pure::TYPE.
+ - Update Module::Install to 1.08 version.
 
 0.03 2013-09-21
  - Add LICENSE file.
